# setting-up-bullet-physics-from-config-opengles20-sdl3-cpp

./: CMakeLists.txt  config-web.bat  config-win.bat
src/: main.cpp
